# placed

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
archive/: Cargo.toml
archive/src/: archive_reader.rs  archive_writer.rs  constants.rs  errors.rs  lib.rs  structures.rs
archiver/: Cargo.toml
archiver/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
player/: Cargo.toml
player/shaders/: scale.wgsl  texture_update_by_coords.compute.wgsl
player/src/: ai.rs  color_buffer_cache.rs  controls.rs  lib.rs  pixel_art_display_state.rs  renderers.rs  texture_update_by_coords.rs  transform_generator.rs
reader/: Cargo.toml
reader/src/: lib.rs  main.rs
src/: main.rs
structures/: Cargo.toml
structures/src/: lib.rs
