[package]
name = "place"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
csv = "1.1.6"
gzp = "0.10.1"
rmp-serde = "1.1.1"
serde = "1.0.147"
serde_derive = "1.0.147"
tempfile = "3.3.0"
