[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
csv = "1.1.6"
rmp-serde = "1.1.1"
serde = "1.0.147"
serde_derive = "1.0.147"
tempfile = "3.3.0"
structures = { path = "../structures" }
reader = { path = "../reader" }
alkahest = "0.1.5"
clap = { version = "4.0.29", features = ["derive"] }
mla = "1.3.0"
