[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
archive = { path = "../archive" }
player = { path = "../player" }
clap = { version = "4.0.29", features = ["derive"] }
byte-unit = "4.0.18"
chrono = "0.4.23"
csv = "1.1.6"
colors-transform = "0.2.11"
image = "0.24.5"
proc-macro2 = { version = "=1.0.60" }
