[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archive = { path = "../archive" }
colors-transform = "0.2.11"
wgpu = "0.16.1"
winit = "0.28.3"
winit_input_helper = "0.14.1"
pollster = "0.2"
ultraviolet = "0.9.0"
bytemuck = "1.12.3"
num = "0.4.0"
futures-intrusive = "0.5.0"
egui = "0.22.0"
eframe = "0.22.0"
egui_winit_platform = "0.19.0"
egui_wgpu_backend = "0.24.0"

[dev-dependencies]
rand = "0.8.5"
image = "0.24.5"
log = "0.4.17"
env_logger = "0.10.0"
