[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
rmp-serde = "1.1.1"
structures = { path = "../structures" }
serde = "1.0.147"
colors-transform = "0.2.11"
alkahest = "0.1.5"
mla = "1.3.0"
bincode = "2.0.0-rc.2"
